--- a/infos-pratiques.html
+++ b/infos-pratiques.html
@@ -194,38 +194,56 @@
   </section>
     </main>
 
-  <!-- ===== FOOTER ===== -->
-  <footer class="footer">
+   <!-- ===== FOOTER ===== -->
+<footer class="footer">
 
-    <div class="footer__top">
-      <a class="footer__logo" href="/index.html">
-        <img src="/assets/img/logo-festival.svg" alt="Logo du festival"/>
+  <!-- Logo + social -->
+  <div class="footer__top">
+
+    <img src="assets/img/logo-festival.svg" alt="Logo du festival" class="footer__logo">
+
+    <div class="footer__socials">
+      <a href="#" aria-label="Email">
+        <img src="assets/icons/icon-mail.svg" alt="Email">
       </a>
 
-      <div class="footer__socials">
-        <a href="mailto:contact@example.com"><img src="/assets/icons/icon-mail.svg" alt="Mail"/></a>
-        <a href="#"><img src="/assets/icons/icon-youtube.svg" alt="YouTube"/></a>
-        <a href="#"><img src="/assets/icons/icon-instagram.svg" alt="Instagram"/></a>
-        <a href="#"><img src="/assets/icons/icon-tiktok.svg" alt="TikTok"/></a>
-        <a href="#"><img src="/assets/icons/icon-facebook.svg" alt="Facebook"/></a>
-      </div>
+      <a href="#" aria-label="YouTube">
+        <img src="assets/icons/icon-youtube.svg" alt="YouTube">
+      </a>
+
+      <a href="#" aria-label="Instagram">
+        <img src="assets/icons/icon-instagram.svg" alt="Instagram">
+      </a>
+
+      <a href="#" aria-label="TikTok">
+        <img src="assets/icons/icon-tiktok.svg" alt="TikTok">
+      </a>
+
+      <a href="#" aria-label="Facebook">
+        <img src="assets/icons/icon-facebook.svg" alt="Facebook">
+      </a>
     </div>
 
-    <div class="footer__middle">
-      <p>Conditions générales</p>
-      <p>Gérer les cookies</p>
-    </div>
+  </div>
 
-    <div class="footer__bottom">
-      <p>
-        Projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département
-        <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank">
-          MMi de Montbéliard
-        </a>
-      </p>
-    </div>
+  <!-- Legal links -->
+  <div class="footer__links">
+    <a href="#" class="footer__link">Conditions générales</a>
+    <a href="#" class="footer__link">Gérer les cookies</a>
+  </div>
 
-  </footer>
+  <!-- Bottom text -->
+  <div class="footer__bottom">
+    <p>
+      Projet réalisé en 2025 dans le cadre d’un exercice pédagogique au département 
+      <a href="https://www.iut-nfc.univ-fcomte.fr/b-u-t-metiers-du-multimedia-et-de-linternet/" target="_blank">
+        MMi de Montbéliard
+      </a>
+    </p>
+  </div>
+
+</footer>
+<script src="src/js/menu.js"></script>
 
 </body>
 </html>
