--- a/scene.html
+++ b/scene.html
@@ -80,13 +80,11 @@
       </nav>
     </header>
 
-
-    <main>
-
+<main>
   <!-- IMAGE SCÈNE -->
   <section class="scene-hero">
-    <img src="assets/img/scene-la-roseliere.jpg" alt="Scène La Roselière" class="scene-hero__img">
-    <h1 class="scene-hero__title">Scène La Roselière</h1>
+    <img src="assets/img/scene-la-roseliere.webp" alt="Scène La Roselière" class="scene-hero__img">
+    <div class="scene-hero__label">Scène La Roselière</div>
   </section>
 
   <!-- DESCRIPTION -->
@@ -100,7 +98,9 @@
   <section class="scene-about">
     <h2>À propos de la scène</h2>
     <p>
-      La Scène La Roselière est un espace en plein air situé dans un cadre naturel, au bord de la rivière. Elle offre une ambiance chaleureuse et détendue, idéale pour profiter de concerts en fin de journée.<br><br>
+      La Scène La Roselière est un espace en plein air situé dans un cadre naturel, au bord de la rivière. Elle offre une ambiance chaleureuse et détendue, idéale pour profiter de concerts en fin de journée.
+    </p>
+    <p>
       Le public peut s’installer sur des assises libres ou rester debout pour vivre la musique au plus près de la scène.
     </p>
   </section>
@@ -118,7 +118,9 @@
       referrerpolicy="no-referrer-when-downgrade">
     </iframe>
   </section>
-    </main>
+</main>
+
+
 <!-- ===== FOOTER ===== -->
 <footer class="footer">
 
