--- a/scenes.html
+++ b/scenes.html
@@ -96,7 +96,9 @@
         </div>
       </div>
 
-      <img src="/assets/img/scene-la-roseliere.webp" alt="Scène La Roselière" class="scene-block__img"/>
+      <a href="scene.html">
+    <img src="/assets/img/scene-la-roseliere.webp" alt="Scène La Roselière" class="scene-block__img"/>
+  </a>
 
       <a href="https://www.google.com/maps/search/?api=1&query=La+Roseli%C3%A8re+Montb%C3%A9liard"
          target="_blank"
@@ -156,7 +158,9 @@
         
       </div>
 
+      <a href="scene.html">
       <img src="/assets/img/scene-pre-de-la-rose.jpg" alt="Scène Le Pré de la Rose" class="scene-block__img"/>
+      </a>
 
       <a href="https://www.google.com/maps/search/?api=1&query=Le+Pr%C3%A9+de+la+Rose+Montb%C3%A9liard"
          target="_blank"
