--- a/infos-pratiques.html
+++ b/infos-pratiques.html
@@ -165,33 +165,26 @@
 
 
   <!-- ===== FAQ ===== -->
-  <section class="infos-faq">
+<section class="infos-faq">
+  <h2 class="infos-section__title infos-section__title--bg">FAQ</h2>
 
-    <h2 class="infos-section__title infos-section__title--bg">
-      FAQ
-    </h2>
+  <div class="faq-item__block">
+    <p>Le festival est-il payant ? — Non, c’est 100 % gratuit — concerts, ateliers, animations, tout y est.</p>
+  </div>
 
-    <div class="faq-item">
-      <p class="faq-question">Le festival est-il payant ?</p>
-      <p class="faq-answer">— Non, c’est 100 % gratuit — concerts, ateliers, animations, tout y est.</p>
-    </div>
+  <div class="faq-item__block">
+    <p>Y a-t-il des food trucks / restauration sur place ? — Oui — des stands de produits locaux et snacks seront disponibles près des scènes.</p>
+  </div>
 
-    <div class="faq-item">
-      <p class="faq-question">Y a-t-il des food trucks / restauration sur place ?</p>
-      <p class="faq-answer">— Oui — des stands de produits locaux et snacks seront disponibles près des scènes.</p>
-    </div>
+  <div class="faq-item__block">
+    <p>Peut-on venir en vélo ? — Oui — parking vélos disponibles près de Pré de la Rose et La Roselière.</p>
+  </div>
 
-    <div class="faq-item">
-      <p class="faq-question">Peut-on venir en vélo ?</p>
-      <p class="faq-answer">— Oui — parking vélos disponibles près de Pré de la Rose et La Roselière.</p>
-    </div>
+  <div class="faq-item__block">
+    <p>Les animaux sont-ils autorisés ? — Oui, chiens tenus en laisse sont acceptés.</p>
+  </div>
+</section>
 
-    <div class="faq-item">
-      <p class="faq-question">Les animaux sont-ils autorisés ?</p>
-      <p class="faq-answer">— Oui, chiens tenus en laisse sont acceptés.</p>
-    </div>
-
-  </section>
     </main>
 
    <!-- ===== FOOTER ===== -->
